# simulador-atm

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile.old
db/: db.json  db_example.json
include/: Account.h  Atm.h  Transaction.h  User.h  utils.h
src/: Account.cpp  Atm.cpp  Transaction.cpp  User.cpp  main  main.cpp  utiils.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: test_account.cpp  test_user.cpp
